k/coder/resource-ingress-coder.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  annotations:
    TODO-cert-manager.io/cluster-issuer: zerossl-production
    external-dns.alpha.kubernetes.io/hostname: coder.defn.run
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-http-to-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: coder.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 80
  tls:
    - hosts:
        - coder.defn.run
